--- a/README.Rmd
+++ b/README.Rmd
@@ -28,15 +28,33 @@ You can install the development version from [GitHub](https://github.com/) with:
 # install.packages("devtools")
 devtools::install_github("skvrnami/uwebasr2")
 ```
-## Example
 
-This is a basic example which shows you how to solve a common problem:
+## Usage
 
 ```{r example}
 library(uwebasr2)
 ```
 
+The library contains two functions that provide access to UWebASR API: `uwebasr_post` and `uwebasr_get`.
+
+Both of the functions have similar parameters: 
+
+- `lang_model` - Language model that is to be used for speech transcription. The available
+models are `CZ` for Czech language model and `SK` for Slovak language model. 
+- `file_path` (in the case of `uwebasr_post`) / `audio_url` (in the case of `uwebasr_get`) - path or URL to the audio. 
+- `format` - Format of the output. Available formats include: `plaintext` (default option) and `json`.
+The API also accepts formats `trs`, `extended_trs` and `webvtt`, but the working of the package is not tested for using these formats. 
+
+The `uwebasr_post` uploads file from local filesystem to the API and returns the transcription.
+
 ```{r}
 babis_dopis <- uwebasr_post(lang_model = "CZ", "babis_dopis.mp3")
-babis_dopis
+cat(babis_dopis)
 ```
+
+```{r, eval=FALSE}
+# Doesn't work for some reason
+grospic_intro <- uwebasr_get("CZ", "http://skvrnami.github.io/uwebasr/grospic.mp3", "plaintext")
+cat(grospic_intro)
+```
+
